--- a/src/style.css
+++ b/src/style.css
@@ -60,11 +60,10 @@ button:focus-visible {
 }
 
 #app {
-  width: 100vw;
+  width: 100%;
   min-width: 0;
   max-width: 100vw;
   margin: 0;
-  padding: 2rem;
   text-align: initial;
   box-sizing: border-box;
 }
