--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,15 @@ a {
 a:hover {
   color: #535bf2;
 }
+.inline-block{
+  display: inline-block;
+}
+.mt-03{
+  margin-top: .3rem;
+}
+.mr-03{
+  margin-right: .3rem;
+}
 
 body {
   margin: 0;
