<fix> : main content 사이즈 설정 미비로 등록 아이템이 없을때 스크롤이 생기던 버그 픽스

--- a/src/style.css
+++ b/src/style.css
@@ -82,6 +82,7 @@ button:focus-visible {
   margin: 0;
   text-align: initial;
   box-sizing: border-box;
+  background: #1D1E23;
 }
 
 @media (prefers-color-scheme: light) {
